update unreturned front and back

--- a/static/unreturned/unreturnedadminstyle.css
+++ b/static/unreturned/unreturnedadminstyle.css
@@ -99,8 +99,9 @@ input, select {
 /*
 Start coding here
 */
+
+/* #region Body */
 body {
-  line-height:1;
   line-height:1;
   height: 100%;
   width : 100%;
@@ -112,211 +113,199 @@ body {
   font-family: Arial, sans-serif; 
   padding-top: 100px;
 }
-  
-  .head {
-    display: flex;
-    background-color: orange;
-    padding: 10px;
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: rgb(113,26,33); 
-    padding: 5px;
-    border-bottom: 20px solid rgb(230,124,55); 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-  }
-  
-  .left-section {
-    width: 100px;
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    flex-shrink: 0;
-  }
-  
-  .lspu-logo{
-    width: 90px;
-    border-radius:50px;
-  }
-  
-  .middle-section {
-    flex: 1 !important;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
-    display: flex !important;
-    align-items: center !important;
-  }
-  
-  form {
-    display: flex !important;
-    flex: 1 !important;
-    align-items: center !important;
-  }
-  
-  .search-bar {
-    display: flex;
-    flex: 1;
-    height: 14px;
-    padding: 10px;
-    margin: 5px;
-    border: none;
-    border-radius: 3px;
-    outline: none;
-    background-color: white;
-    color: #000000; 
-    font-size: 15px;
-    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
-    width: 0;
-  }
-  
-  .search-bar::placeholder{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px; 
-    
-  }
-  
-  .search-button {
-    background-color: rgb(230,124,55) !important; 
-     color: #ffffff !important;
-    padding: 10px 15px !important;
-    border: none !important;
-    border-radius: 3px !important;
-    margin-right: 10px !important;
-    cursor: pointer !important;
-    width: fit-content !important;
-    height: 40px;
-    margin-top: 7px;
-  } 
-  
-  .search-button:hover  {
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) !important;
-  }
-  
-  .right-section {
-    width: 100px;
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-    flex-shrink: 0;
-  }
-  
-  .ccs-logo{
-    width: 92px;
-    border-radius:46px;
-  }
-  
-  
-  .buttons-box {
-    background-color: rgb(255, 255, 255);
-    padding-top: 3px;
-    padding-bottom: 3px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
-    margin-top: 40px;
-    margin-left: 70px;
-    margin-right: 70px;
-    border-radius: 5px;
-  }
-  
-  .button-grid{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 5px;
-    flex-wrap: wrap;
-    align-content: first baseline;
-    gap: 1em;
-  }
-  
-  .buttons-tabs {
-    background-color: rgb(255,255,255);
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    vertical-align: top;
-    transition-duration: 0.4s;
-  }
-    
-  .buttons-tabs:hover  {
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  }
-  
-  .buttons-tabs:active {
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  }
-  
-  a{
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-    font-family: Arial;
-  }
-  
-  a:link { 
-    text-decoration: none; 
-  } 
-  
-  a:hover { 
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  } 
-  
-  a:active { 
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  } 
+/* #endregion */
 
-  .form{
-    background-color: #f8f9fa;
-    padding: 15px 0;
-    border: 2px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; 
-    border-radius: 15px;
-  }
-#container {
-    border-radius: 10px; 
-    overflow: hidden;
-    
-}
-  #return_btn:hover{
-    background-color: orange;
-  }
-
-  .inventory_item {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-}
-
-.recent-lines {
-  width: 100%;
-  border-top: 2px solid gray; 
-  margin-top: 10px; 
-  margin-bottom: 20px;
-  padding-top: 10px;
-  padding-bottom: 6px;
-}
-
-#bottom {
+/* #region Header */
+.header {
   display: flex;
-  justify-content: flex-end; 
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(113,26,33); 
+  padding: 5px;
+  border-bottom: 20px solid rgb(230,124,55); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
+.left-section {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  flex-shrink: 0;
+}
+
+.lspu-logo {
+  width: 90px;
+  border-radius:50px;
+}
+
+.middle-section {
+  flex: 1 !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+.middle-section form {
+  display: flex;
+  flex: 1 !important;
+  align-items: center !important;
+}
+
+.middle-section input[type="text"] {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  height: 40px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.search-bar {
+  display: flex;
+  flex: 1;
+  height: 14px;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  background-color: white;
+  color: #000000; 
+  font-size: 15px;
+  box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+  width: 0;
+}
+
+.search-bar::placeholder{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; 
+  
+}
+
+.search-button {
+  background-color: rgb(230,124,55) !important; 
+   color: #ffffff !important;
+  padding: 10px 15px !important;
+  border: none !important;
+  border-radius: 3px !important;
+  margin-right: 10px !important;
+  cursor: pointer !important;
+  width: fit-content !important;
+  height: 40px;
+  margin-top: 7px;
+} 
+
+.search-button:hover  {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) !important;
+}
+
+.right-section {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  flex-shrink: 0;
+}
+
+.ccs-logo{
+  width: 92px;
+  border-radius:46px;
+}
+/* #endregion */
+
+/* #region Navigation */
+.buttons-box {
+  background-color: rgb(255, 255, 255);
+  padding-top: 3px;
+  padding-bottom: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); 
+  margin-top: 40px;
+  margin-left: 70px;
+  margin-right: 70px;
+  border-radius: 5px;
+}
+
+.button-grid{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 5px;
+  flex-wrap: wrap;
+  align-content: first baseline;
+  gap: 1em;
+}
+
+.buttons-tabs {
+  background-color: rgb(255,255,255);
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  vertical-align: top;
+  transition-duration: 0.4s;
+}
+  
+.buttons-tabs:hover  {
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+.buttons-tabs:active {
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+a{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  font-family: Arial;
+}
+
+a:link { 
+  text-decoration: none; 
+} 
+
+a:hover { 
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+
+a:active { 
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+/* #endregion */
+
+/* #region Main container */
+.form {
+  margin-top: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 15px 0;
+  border: 2px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
+  margin: 30px 70px 0; 
+  border-radius: 15px;
+}
+
+#container {
+  border-radius: 10px; 
+  overflow: hidden;
+}
+/* #endregion */
+
+/* #region Unreturned */
 #wrapper {
   border: 1px solid black; 
   margin: 10px;
@@ -352,7 +341,8 @@ body {
 }
 
 #item_details {
-  margin-left: 10px; 
+  margin-left: 10px;
+   
 }
 
 #item_quantity {
@@ -361,10 +351,24 @@ body {
   margin-right: 50px;
 }
 
+#bottom {
+  display: flex;
+  justify-content: flex-end; 
+}
+
+.recent-lines {
+  width: 100%;
+  border-top: 2px solid gray; 
+  margin-top: 10px; 
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 6px;
+}
+
 #return_btn {
   float: right;  
   margin-right: 10px;
-  border: 2px solid orange;
+  border: 1px solid rgb(0, 0, 0);
   font-size: 18px;
   font-weight: 500;
   background-color: white;
@@ -375,11 +379,63 @@ body {
   background-color: orange;
 }
 
-a {
-  text-decoration: none;
+.recent-lines button:hover {
   color: black;
+  background-color: orange;
 }
 
+#popup_form {
+  display: none;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  max-width: 80%;
+  background-color: white;
+  height: fit-content;
+  border: 1px solid black;
+  border-radius: 10px;
+  transition: 200ms ease-in-out;
+}
+
+#popup_form form {
+  width: 50%;
+  padding: 15px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#popup_form form .input_section{
+  display: flex;
+  flex-direction: column;
+}
+
+#popup_form input {
+  height: 30px;
+  width: 100%;
+  margin: 15px 25px;
+  outline-style: solid;
+  outline: 2px black;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+/* #endregion */
+
+/* #region Mobile */
 @media screen and (max-width: 768px) {
   header {
     flex-direction: column;
@@ -468,3 +524,4 @@ a {
 }
 
 }
+/* #endregion */
