--- a/static/members/memberstyle.css
+++ b/static/members/memberstyle.css
@@ -99,8 +99,8 @@ input, select {
 /*
 Start coding here
 */
+/* #region Body */
 body {
-  line-height:1;
   line-height:1;
   height: 100%;
   width : 100%;
@@ -112,215 +112,225 @@ body {
   font-family: Arial, sans-serif; 
   padding-top: 100px;
 }
-  
-  .head {
-    display: flex;
-    background-color: orange;
-    padding: 10px;
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: rgb(113,26,33); 
-    padding: 5px;
-    border-bottom: 20px solid rgb(230,124,55); 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-  }
-  
-  .left-section {
-    width: 100px;
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    flex-shrink: 0;
-  }
-  
-  .lspu-logo{
-    width: 90px;
-    border-radius:50px;
-  }
-  
-  .middle-section {
-    flex: 1 !important;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
-    display: flex !important;
-    align-items: center !important;
-  }
-  
-  form {
-    display: flex !important;
-    flex: 1 !important;
-    align-items: center !important;
-  }
-  
-  .search-bar {
-    display: flex;
-    flex: 1;
-    height: 14px;
-    padding: 10px;
-    margin: 5px;
-    border: none;
-    border-radius: 3px;
-    outline: none;
-    background-color: white;
-    color: #000000; 
-    font-size: 15px;
-    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
-    width: 0;
-  }
-  
-  .search-bar::placeholder{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px; 
-    
-  }
-  
-  .search-button {
-    background-color: rgb(230,124,55) !important; 
-     color: #ffffff !important;
-    padding: 10px 15px !important;
-    border: none !important;
-    border-radius: 3px !important;
-    margin-right: 10px !important;
-    cursor: pointer !important;
-    width: fit-content !important;
-    height: 40px;
-    margin-top: 7px;
-  } 
-  
-  .search-button:hover  {
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) !important;
-  }
-  
-  .right-section {
-    width: 100px;
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-    flex-shrink: 0;
-  }
-  
-  .ccs-logo{
-    width: 92px;
-    border-radius:46px;
-  }
-  .buttons-box {
-    background-color: rgb(255, 255, 255);
-    padding-top: 3px;
-    padding-bottom: 3px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); 
-    margin-top: 40px;
-    margin-left: 70px;
-    margin-right: 70px;
-    border-radius: 5px;
-  }
-  
-  .button-grid{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 5px;
-    flex-wrap: wrap;
-    align-content: first baseline;
-    gap: 1em;
-  }
-  
-  .buttons-tabs {
-    background-color: rgb(255,255,255);
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    vertical-align: top;
-    transition-duration: 0.4s;
-  }
-    
-  .buttons-tabs:hover  {
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  }
-  
-  .buttons-tabs:active {
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  }
-  
-  a{
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-    font-family: Arial;
-  }
-  
-  a:link { 
-    text-decoration: none; 
-  } 
-  
-  a:hover { 
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  } 
-  
-  a:active { 
-    color: rgb(230,124,55);
-    text-decoration: underline solid  rgb(230,124,55) 2px;
-  } 
-  .container, .recent-container{
-    display: flex;
-    justify-content: space-between;
-    
-  }
-  .item-container{
-    display: flex;
-    justify-content: space-between;
-    
-  }
-  .navbar-brand {
-    color: black;
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin-right: 30px;
-    margin-left: 30px;
-    text-decoration: none; 
-    position: relative; 
-    transition: color 0.3s ease, font-weight 0.3s ease; 
-  }
-  
-  .navbar-brand::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: firebrick; 
-    visibility: hidden;
-    transform: scaleX(0); 
-    transition: all 0.3s ease; 
-  }
-  
- 
-  .navbar-brand:hover {
-    color:firebrick; 
-    font-weight: lighter; 
-  }
-  
-  .navbar-brand:hover::before {
-    visibility: visible;
-    transform: scaleX(1); 
-  }
+/* #endregion */
 
+/* #region Header */
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(113,26,33); 
+  padding: 5px;
+  border-bottom: 20px solid rgb(230,124,55); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.left-section {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  flex-shrink: 0;
+}
+
+.lspu-logo{
+  width: 90px;
+  border-radius:50px;
+}
+
+.middle-section {
+  flex: 1 !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+.middle-section form {
+  display: flex;
+  flex: 1 !important;
+  align-items: center !important;
+}
+
+.middle-section input[type="text"] {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  height: 40px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.search-bar {
+  display: flex;
+  flex: 1;
+  height: 14px;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  background-color: white;
+  color: #000000; 
+  font-size: 15px;
+  box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+  width: 0;
+}
+
+.search-bar::placeholder{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; 
+  
+}
+
+.search-button {
+  background-color: rgb(230,124,55) !important; 
+   color: #ffffff !important;
+  padding: 10px 15px !important;
+  border: none !important;
+  border-radius: 3px !important;
+  margin-right: 10px !important;
+  cursor: pointer !important;
+  width: fit-content !important;
+  height: 40px;
+  margin-top: 7px;
+} 
+
+.search-button:hover  {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) !important;
+}
+
+.right-section {
+  width: 100px;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  flex-shrink: 0;
+}
+
+.ccs-logo{
+  width: 92px;
+  border-radius:46px;
+}
+
+/* #endregion */
+  
+/* #region Navigation */
+.buttons-box {
+  background-color: rgb(255, 255, 255);
+  padding-top: 3px;
+  padding-bottom: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); 
+  margin-top: 40px;
+  margin-left: 70px;
+  margin-right: 70px;
+  border-radius: 5px;
+}
+
+.button-grid{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 5px;
+  flex-wrap: wrap;
+  align-content: first baseline;
+  gap: 1em;
+}
+
+.buttons-tabs {
+  background-color: rgb(255,255,255);
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  vertical-align: top;
+  transition-duration: 0.4s;
+}
+  
+.buttons-tabs:hover  {
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+.buttons-tabs:active {
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+a{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  font-family: Arial;
+}
+
+a:link { 
+  text-decoration: none; 
+} 
+
+a:hover { 
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+
+a:active { 
+  color: rgb(230,124,55);
+  text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+/* #endregion */
+
+/* #region Main container */
+.form{
+  margin-top: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 15px 0;
+  border: 2px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
+  margin: 30px 70px 0; 
+  border-radius: 15px;
+}
+/* #endregion */
+
+/* #region Users */
+.users {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+  gap: 1em;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: Arial, Helvetica, sans-serif; 
+}
+
+.users button {
+  background-color: white;
+  margin-top: 5px;
+  color: black;
+  border: 1px solid rgb(0, 0, 0);
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  width: 150px;
+  height: 150px;
+}
+
+.users button:hover {
+  background-color: orange;
+}
 
 .user_info {
   position: fixed;
@@ -339,26 +349,7 @@ body {
 }
 
 .user_info.active {
-    transform: translateY(-50%) scale(1);
-}
-
-.user_borrowed_info {
-    position: fixed;
-    top: 50%;
-    left: 320px; 
-    transform: translateY(-50%) scale(0);
-    transition: transform 200ms ease-in-out;
-    border: 1px solid black;
-    border-radius: 10px;
-    z-index: 10;
-    background-color: white;
-    width: 200px; 
-    max-width: 80%;
-    margin-left: 20px; 
-}
-
-.user_borrowed_info.active {
-    transform: translateY(-50%) scale(1);
+  transform: translateY(-50%) scale(1);
 }
 
 #user_info button {
@@ -373,67 +364,16 @@ body {
 }
 
 #user_info button:hover {
-    color: orange;
+  color: orange;
 }
 
 #user_info p {
-    margin-top: 5px;
-    margin-left: 10px;
-    font-weight: bold;
-    align-items: center;
-    display: flex;
-    padding-top: 5px;
-}
-
-.user-button {
-  text-align: center;
-  width: 150px;
-  height: 150px;
-  border-radius: 15px;
-  cursor: pointer;
-  margin-right: 30px;
-  font-size: large;
-}
-
-.users button {
-    text-align: center;
-    width: 150px;
-    height: 150px;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-right: 30px;
-    font-size: large;
-}
-
-.users button:hover {
-    background-color: orange;
-    color: white;
-}
-
-@media only screen and (max-width: 768px) {
-  .users button {
-      width: 100%;  
-      height: auto;  
-      margin-right: 0;  
-  }
-}
-
-#wrapper {
-  border: 1px solid black; 
-  margin: 10px;
-  padding: 10px;
-  background-color: #f9f9f9; 
-  border-radius: 10px;
-}
-
-.form{
-  background-color: #f8f9fa;
-  padding: 15px 0;
-  border: 2px solid #dee2e6;
-  border-bottom: 1px solid #dee2e6;
-  box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-  margin: 30px 70px 0; 
-  border-radius: 15px;
+  margin-top: 5px;
+  margin-left: 10px;
+  font-weight: bold;
+  align-items: center;
+  display: flex;
+  padding-top: 5px;
 }
 
 .user_borrowed_info {
@@ -448,12 +388,19 @@ body {
   background-color: white;
   width: 300px;
   max-width: 80%;
+  margin-left: 20px; 
 }
 
 .user_borrowed_info.active {
   transform: translate(-50%, -50%) scale(1);
 }
 
+.user_borrowed_info ul {
+  list-style-type: none;
+}
+/* #endregion */
+
+/* #region Mobile */
 @media screen and (max-width: 768px) {
   header {
     flex-direction: column;
@@ -543,5 +490,6 @@ body {
 }
 
 }
+/* #endregion */
 
 
